--- a/mouseEffect05-javascript.html
+++ b/mouseEffect05-javascript.html
@@ -47,7 +47,7 @@
         .bg {
             position: relative;
             height: 100vh;
-            background-image: url(../assets/img/bg19@2.jpg);
+            background-image: url("https://shin-yumi.github.io/mouseEffect/goyangE.jpg");
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
@@ -59,11 +59,11 @@
             top: 0;
             width: 100%;
             height: 100vh;
-            background-color: rgba(5, 36, 70, 0.8);
+            background-color: rgba(172, 144, 123, 0.8);
             z-index: -1;
         }
     
-        /* info */
+        info
         .info {
             color: #fff;
             font-family: "NEXONLv1Gothic";
@@ -193,7 +193,7 @@
         <article class="mouseCont">
             <div class="moveImage">
                 <div class="mImg">
-                    <img src="../assets/img/bg19.jpg" alt="이미지">
+                    <img src="https://shin-yumi.github.io/mouseEffect/goyangE.jpg" alt="이미지">
                 </div>
                 <div class="mText">
                     <p>I never dreamed about success, I worked for it.</p>
@@ -204,8 +204,8 @@
     </main>
     <!-- //main -->
 
-    <!-- info -->
-    <div class="info">
+    
+    <!-- <div class="info">
         <h1><a href="mouseIndex.html">Mouse Effect05 - Javascript</a></h1>
         <p>마우스 이펙트 - 이미지 효과</p>
     </div>
